// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`collatePluginAPIs Identifies APIs used by a site's plugins 1`] = `
Object {
  "badExports": Object {
    "browser": Array [],
    "node": Array [],
    "ssr": Array [],
  },
  "flattenedPlugins": Array [
    Object {
      "browserAPIs": Array [
        "browser-1",
        "browser-2",
      ],
      "id": "Plugin foo",
      "name": "foo-plugin",
      "nodeAPIs": Array [
        "node-1",
        "node-2",
      ],
      "pluginOptions": Object {
        "plugins": Array [],
      },
      "resolve": "/foo",
      "ssrAPIs": Array [
        "ssr-1",
        "ssr-2",
      ],
      "version": "1.0.0",
    },
    Object {
      "browserAPIs": Array [
        "browser-2",
        "browser-3",
      ],
      "id": "Plugin default-site-plugin",
      "name": "default-site-plugin",
      "nodeAPIs": Array [
        "node-2",
        "node-3",
      ],
      "pluginOptions": Object {
        "plugins": Array [],
      },
      "resolve": "/bar",
      "ssrAPIs": Array [
        "ssr-2",
        "ssr-3",
      ],
      "version": "ec21d02c31ab044d027a1d2fcaeb4a79",
    },
  ],
}
`;

exports[`collatePluginAPIs Identifies incorrect APIs used by a site's plugins 1`] = `
Object {
  "badExports": Object {
    "browser": Array [
      Object {
        "exportName": "bad-browser-2",
        "pluginName": "default-site-plugin",
        "pluginVersion": "ec21d02c31ab044d027a1d2fcaeb4a79",
      },
      Object {
        "exportName": "bad-browser-3",
        "pluginName": "default-site-plugin",
        "pluginVersion": "ec21d02c31ab044d027a1d2fcaeb4a79",
      },
    ],
    "node": Array [
      Object {
        "exportName": "bad-node-2",
        "pluginName": "default-site-plugin",
        "pluginVersion": "ec21d02c31ab044d027a1d2fcaeb4a79",
      },
      Object {
        "exportName": "bad-node-3",
        "pluginName": "default-site-plugin",
        "pluginVersion": "ec21d02c31ab044d027a1d2fcaeb4a79",
      },
    ],
    "ssr": Array [
      Object {
        "exportName": "bad-ssr-2",
        "pluginName": "default-site-plugin",
        "pluginVersion": "ec21d02c31ab044d027a1d2fcaeb4a79",
      },
      Object {
        "exportName": "bad-ssr-3",
        "pluginName": "default-site-plugin",
        "pluginVersion": "ec21d02c31ab044d027a1d2fcaeb4a79",
      },
    ],
  },
  "flattenedPlugins": Array [
    Object {
      "browserAPIs": Array [
        "browser-1",
        "browser-2",
      ],
      "id": "Plugin foo",
      "name": "foo-plugin",
      "nodeAPIs": Array [
        "node-1",
        "node-2",
      ],
      "pluginOptions": Object {
        "plugins": Array [],
      },
      "resolve": "/foo",
      "ssrAPIs": Array [
        "ssr-1",
        "ssr-2",
      ],
      "version": "1.0.0",
    },
    Object {
      "browserAPIs": Array [],
      "id": "Plugin default-site-plugin",
      "name": "default-site-plugin",
      "nodeAPIs": Array [],
      "pluginOptions": Object {
        "plugins": Array [],
      },
      "resolve": "/bad-apis",
      "ssrAPIs": Array [],
      "version": "ec21d02c31ab044d027a1d2fcaeb4a79",
    },
  ],
}
`;

exports[`handleMultipleReplaceRenderers Does nothing when replaceRenderers is implemented once 1`] = `
Array [
  Object {
    "browserAPIs": Array [],
    "id": "Plugin foo",
    "name": "foo-plugin",
    "nodeAPIs": Array [],
    "pluginOptions": Object {
      "plugins": Array [],
    },
    "resolve": "___TEST___",
    "ssrAPIs": Array [
      "replaceRenderer",
    ],
    "version": "1.0.0",
  },
  Object {
    "browserAPIs": Array [],
    "id": "Plugin default-site-plugin",
    "name": "default-site-plugin",
    "nodeAPIs": Array [],
    "pluginOptions": Object {
      "plugins": Array [],
    },
    "resolve": "___TEST___",
    "ssrAPIs": Array [],
    "version": "ec21d02c31ab044d027a1d2fcaeb4a79",
  },
]
`;

exports[`handleMultipleReplaceRenderers Sets skipSSR when replaceRenderers is implemented more than once 1`] = `
Array [
  Object {
    "browserAPIs": Array [],
    "id": "Plugin foo",
    "name": "foo-plugin",
    "nodeAPIs": Array [],
    "pluginOptions": Object {
      "plugins": Array [],
    },
    "resolve": "___TEST___",
    "skipSSR": true,
    "ssrAPIs": Array [
      "replaceRenderer",
    ],
    "version": "1.0.0",
  },
  Object {
    "browserAPIs": Array [],
    "id": "Plugin default-site-plugin",
    "name": "default-site-plugin",
    "nodeAPIs": Array [],
    "pluginOptions": Object {
      "plugins": Array [],
    },
    "resolve": "___TEST___",
    "ssrAPIs": Array [
      "replaceRenderer",
    ],
    "version": "ec21d02c31ab044d027a1d2fcaeb4a79",
  },
]
`;
